--- a/ProgrammingLibrary/ProgrammingLibrary.vcxproj.filters
+++ b/ProgrammingLibrary/ProgrammingLibrary.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClInclude Include="ArrayManagement.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BinaryTree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
