--- a/ProgrammingLibrary/ProgrammingLibrary.vcxproj.filters
+++ b/ProgrammingLibrary/ProgrammingLibrary.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClInclude Include="BinaryTree.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FileHandling.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
