--- a/ProgrammingLibrary/ProgrammingLibrary.vcxproj
+++ b/ProgrammingLibrary/ProgrammingLibrary.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClInclude Include="ArrayManagement.h" />
     <ClInclude Include="BinaryTree.h" />
+    <ClInclude Include="FileHandling.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
